--- a/styles.css
+++ b/styles.css
@@ -11,17 +11,51 @@ body {
   flex-direction: column;
 }
 
+.section-one {
+  text-align: center;
+  height: 500px;
+}
+
+.one-title {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1F2937;
+  padding: 50px;
+}
+
+.one-content {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.one-image {
+  border: 4px solid #3882F6;
+  height: 160px;
+  border-radius: 12px; 
+}
+
+.one-text {
+  font-size: 18px;
+  color: #1F2937;
+}
+
+.info {
+  max-width: 170px;
+}
+
 .section-two {
   background-color: #E5E7EB;
   display: flex;
-  height: 400px;
+  height: 425px;
   justify-content: center;
+  align-items: center;
 }
 
 .section-two-content {
   display: flex;
   flex-direction: column;
-  width: 600px;
+  width: 825px;
 }
 
 .author{
@@ -34,13 +68,14 @@ body {
   color: #1F2937;
   font-size: 36px;
   font-style: italic;
+  font-weight:lighter;
 }
 
 .section-three {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 300px;
+  height: 350px;
   flex-shrink: 0;
 }
 
@@ -50,7 +85,7 @@ body {
   border-radius: 8px;
   justify-content: space-between;
   width: 700px;
-  padding: 40px 100px;
+  padding: 50px 100px;
 }
 
 .three-title {
@@ -71,7 +106,7 @@ body {
   color: #F9FAF8;
   font-size: 18px;
   font-weight: bold;
-  padding: 5px 25px;
+  padding: 5px 30px;
   align-self: center;
 }
 
