--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,9 @@ ul {
 }
 
 .one-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 4px solid #3882F6;
   height: 160px;
   width: 160px;
